--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -11,6 +11,7 @@
     align-items: center;
     width: 100%;
     height: 100vh;
+    background-color: #f6f6f6;
     font-family: "Kanit", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -24,6 +25,7 @@
     align-items: center;
     width: 100vw;
     height: 100%;
+    background-color: transparent;
 }
 
 .block {
